Update modal block - add portal and overlay wraps for more correct modal scrolling, add confirm modal styles

--- a/sass/blocks/_profile-body.sass
+++ b/sass/blocks/_profile-body.sass
@@ -21,6 +21,10 @@ $block: ".profile-body"
   overflow-x: hidden
   background-color: #ecedf1
 
+  &_state_modal,
+  &_state_modal-opened
+    overflow: hidden
+
   // $Body MOD: state inactive
   &_state_inactive
     &:after
