--- a/sass/blocks/_profile-modal.sass
+++ b/sass/blocks/_profile-modal.sass
@@ -15,24 +15,38 @@
 $block: ".profile-modal"
 
 #{$block}
-  position: absolute
-  z-index: 10000
-  top: 35px
-  left: 50%
+  position: relative
+  z-index: 10002
+  display: block
   background-color: #FFF
   border-radius: 10px
   overflow: hidden
-  display: none
   width: 95%
-  max-width: 810px
-  transform: translateX(-50%)
+  max-width: 800px
+  margin: 100px auto 100px
 
-  @media screen and (max-width: 960px)
-    top: 25px
+  @media screen and (max-width: 480px)
+    margin-top: 50px
+    margin-bottom: 50px
+
+  // $Modal window MOD: role confirm dialog
+  &_role_confirm
+    max-width: 480px
+    margin-top: 150px
+    margin-bottom: 150px
+
+    @media screen and (max-width: 480px)
+      margin-top: 100px
+      margin-bottom: 100px
+
 
   // $Modal window MOD: state visible
   &_state_visible
     display: block
+
+  // $Modal window MOD: state hidden
+  &_state_hidden
+    display: none
 
 
   // $Modal window header
@@ -53,6 +67,49 @@ $block: ".profile-modal"
 
     @media screen and (max-width: 960px)
       padding: 30px 20px 30px
+
+    // $Modal window content MOD: justify center
+    &_justify_center
+      text-align: center
+
+
+  // $Modal window footer
+  &__footer
+    width: 100%
+    padding: 35px 20px
+    background-color: #f9f9f9
+    text-align: center
+
+
+  // $Modal window actions
+  &__actions
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: center
+    width: 100%
+
+    @media screen and (max-width: 480px)
+      // $Modal window actions CONTEXT: $Modal window MOD: confirm dialog
+      #{$block}_role_confirm &
+        flex-direction: column
+
+
+  // $Modal window action
+  &__action
+
+    @media screen and (max-width: 480px)
+      // $Modal window action CONTEXT: $Modal window MOD: confirm dialog
+      #{$block}_role_confirm &
+        width: 100%
+
+    &:not(:last-child)
+      margin-right: 20px
+
+      @media screen and (max-width: 480px)
+        #{$block}_role_confirm &
+          margin-right: 0
+          margin-bottom: 20px
 
 
   // $Modal window inner container
@@ -88,6 +145,18 @@ $block: ".profile-modal"
       margin-bottom: 0
 
 
+  // $Modal window subtitle
+  &__subtitle
+    font-family: $f-sans
+    font-size: 20px
+    line-height: 1.5
+    color: #757575
+    font-weight: 500
+
+    &_size_extra
+      font-size: 22px
+
+
   // $Modal window text
   &__text
     font-family: $f-sans
@@ -103,6 +172,36 @@ $block: ".profile-modal"
 
     @media screen and (max-width: 960px)
       padding: 0
+      padding: 0
+
+
+  @at-root
+    // $Modal window portal
+    &-portal
+      position: fixed
+      top: 0
+      right: 0
+      bottom: 0
+      left: 0
+      z-index: 10000
+
+      // $Modal window portal MOD: state hidden
+      &_state_hidden
+        display: none
+
+    // $Modal window overlay
+    &-overlay
+      position: relative
+      display: block
+      width: 100%
+      height: 100%
+      z-index: 10001
+      overflow-x: hidden
+      overflow-y: auto
+
+      // $Modal window overlay MOD: dark overlay
+      &_dark
+        background-color: rgba(0,0,0,.75)
 
 
 
